src/server/run/snapshots/viguno__server__actix_server__hpo_omims__test__hpo_omims_name_contains_no_hpo_terms.snap
---
source: src/server/actix_server/hpo_omims.rs
expression: "&run_query(\"/hpo/omims?name=tel-Manzke+syndro&match=contains\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  omim_id: ~
  name: tel-Manzke syndro
  match_: contains
  max_results: 100
  hpo_terms: false
result:
  - omim_id: "OMIM:616145"
    name: Catel-Manzke syndrome

