src/server/run/snapshots/viguno__server__actix_server__hpo_omims__test__hpo_omims_name_prefix_no_hpo_terms.snap
---
source: src/server/actix_server/hpo_omims.rs
expression: "&run_query(\"/hpo/omims?name=Catel-Manzke+syndro&match=prefix\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  omim_id: ~
  name: Catel-Manzke syndro
  match_: prefix
  max_results: 100
  hpo_terms: false
result:
  - omim_id: "OMIM:616145"
    name: Catel-Manzke syndrome

